# qr_kodbot

./: .gitignore  .railwayignore  .replit  Procfile  README.md  bot.py  config.py  create_samples.py  database.py  file_server.py  pyproject.toml  railway.json  replit.md  requirements.txt  start.py  test_railway.py  test_url.py
attached_assets/: Pasted--Soliq-uz-QR-Fayl-Bot-Yuklangan-fayllarga-QR-kod-yaratadigan-Telegram-bot-2-Maqsad-Foydala-1759856483452_1759856483452.txt
sample_documents/: Yorkulova Setora (2).docx  hisobot_namunasi.docx  namuna_hujjat.docx  shartnoma_namunasi.docx
