[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "flask>=3.1.2",
    "pdf2docx>=0.5.8",
    "pillow>=11.3.0",
    "pymupdf>=1.26.4",
    "python-docx>=1.2.0",
    "python-telegram-bot>=22.5",
    "qrcode>=8.2",
    "telegram>=0.0.1",
]
