[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "pdf2docx>=0.5.8",
    "pillow>=11.3.0",
    "pymupdf==1.23.26",
    "python-docx>=1.2.0",
    "python-telegram-bot[all]>=22.5",
    "qrcode>=8.2",
]
